fixed footer overlapping.

--- a/assets/css/admin_component_style.css
+++ b/assets/css/admin_component_style.css
@@ -568,9 +568,12 @@
  }
  /* FOOTER FIX */
  
- .page-footer {
-     position: absolute;
-     right: 0;
-     bottom: 0;
-     left: 0;
+ body {
+     display: flex;
+     min-height: 100vh;
+     flex-direction: column;
+ }
+ 
+ section {
+     flex: 1 0 auto;
  }
